--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,6 +3,4 @@ updates:
   - package-ecosystem: "gradle" 
     directory: "/" 
     schedule:
-      interval: "weekly"
-    commit-message:
-      include: "release-notes"
+      interval: "daily"
